--- a/index.html
+++ b/index.html
@@ -2,152 +2,192 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Portfolio — David Limoisin (Data Engineer)</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Kamo-data — Portfolio Data Engineer</title>
+  <meta name="description" content="Portfolio de Kamo-data (David Limoisin) : projets Data Engineering (ETL, SQL, dbt, Postgres, Docker) et dashboards." />
   <style>
     :root{
-      --bg:#0b1220; --card:#0f1b33; --muted:#9fb0d0; --text:#e9f0ff;
-      --accent:#7dd3fc; --accent2:#a7f3d0; --border:#1d2a4a;
+      --bg:#0b1220; --card:#121a2b; --text:#e8eefc; --muted:#a9b7d6;
+      --accent:#7dd3fc; --accent2:#a78bfa; --border:rgba(255,255,255,.08);
     }
     *{box-sizing:border-box}
     body{
-      margin:0; font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial;
-      background:linear-gradient(180deg, var(--bg), #060a12);
+      margin:0; font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif;
+      background:linear-gradient(180deg, #070b14, #0b1220 35%, #0b1220);
       color:var(--text);
     }
     a{color:var(--accent); text-decoration:none}
     a:hover{text-decoration:underline}
-    .wrap{max-width:1050px; margin:0 auto; padding:32px 18px 60px}
-    header{display:flex; gap:18px; align-items:flex-start; justify-content:space-between; flex-wrap:wrap}
-    .title h1{margin:0 0 8px; font-size:28px}
-    .title p{margin:0; color:var(--muted); line-height:1.5}
-    .badges{display:flex; gap:10px; flex-wrap:wrap; margin-top:12px}
-    .badge{
-      border:1px solid var(--border); background:rgba(255,255,255,.03);
-      padding:7px 10px; border-radius:999px; font-size:12px; color:var(--muted)
+    .container{max-width:980px; margin:0 auto; padding:28px 18px 60px}
+    header{
+      display:flex; gap:16px; align-items:flex-start; justify-content:space-between; flex-wrap:wrap;
+      margin-bottom:18px;
     }
-    .cta{display:flex; gap:10px; flex-wrap:wrap}
+    .title h1{margin:0; font-size:28px; letter-spacing:.2px}
+    .title p{margin:8px 0 0; color:var(--muted); line-height:1.55; max-width:760px}
+    .badges{display:flex; gap:10px; flex-wrap:wrap; align-items:center}
+    .badge{
+      display:inline-flex; align-items:center; gap:8px;
+      background:rgba(255,255,255,.04);
+      border:1px solid var(--border);
+      padding:8px 10px; border-radius:999px; font-size:13px; color:var(--muted);
+    }
+    .grid{display:grid; grid-template-columns:1fr; gap:14px; margin-top:18px}
+    .card{
+      background:linear-gradient(180deg, rgba(255,255,255,.04), rgba(255,255,255,.02));
+      border:1px solid var(--border);
+      border-radius:18px; padding:18px;
+      box-shadow:0 10px 25px rgba(0,0,0,.25);
+    }
+    .card h2{margin:0 0 8px; font-size:18px}
+    .card p{margin:0; color:var(--muted); line-height:1.55}
+    .meta{margin-top:12px; display:flex; gap:10px; flex-wrap:wrap}
+    .chip{
+      font-size:12px; color:#d8e4ff;
+      border:1px solid var(--border);
+      background:rgba(255,255,255,.03);
+      padding:6px 10px; border-radius:999px;
+    }
+    .cta{margin-top:14px; display:flex; gap:10px; flex-wrap:wrap}
     .btn{
       display:inline-flex; align-items:center; gap:8px;
-      border:1px solid var(--border); background:rgba(125,211,252,.08);
-      padding:10px 12px; border-radius:12px; font-weight:600
+      padding:10px 12px; border-radius:12px;
+      border:1px solid var(--border);
+      background:rgba(255,255,255,.03);
+      color:var(--text);
+      font-size:13px;
     }
-    .btn.secondary{background:rgba(167,243,208,.08)}
-    .section{margin-top:28px}
-    .section h2{margin:0 0 12px; font-size:18px}
-    .grid{display:grid; grid-template-columns:repeat(12, 1fr); gap:14px}
-    .card{
-      grid-column: span 12;
-      border:1px solid var(--border); background:rgba(255,255,255,.03);
-      border-radius:18px; overflow:hidden;
+    .btn.primary{
+      border-color:rgba(125,211,252,.35);
+      background:rgba(125,211,252,.12);
     }
-    @media (min-width: 860px){
-      .card{grid-column: span 6;}
+    .btn:hover{filter:brightness(1.1); text-decoration:none}
+    .two-cols{
+      display:grid; grid-template-columns:1.2fr .8fr; gap:14px;
     }
-    .card .img{
-      width:100%; aspect-ratio: 16/9; object-fit:cover; display:block; background:#0a1222
+    @media (max-width: 820px){
+      .two-cols{grid-template-columns:1fr}
     }
-    .card .content{padding:14px 14px 16px}
-    .card h3{margin:0 0 6px; font-size:16px}
-    .meta{color:var(--muted); font-size:13px; line-height:1.45}
-    .tags{display:flex; gap:8px; flex-wrap:wrap; margin:12px 0 0}
-    .tag{
-      border:1px solid var(--border); padding:5px 8px; border-radius:999px;
-      font-size:12px; color:var(--muted)
+    figure{margin:14px 0 0; padding:0}
+    img{
+      width:100%; height:auto; border-radius:14px;
+      border:1px solid var(--border);
     }
-    .links{display:flex; gap:10px; flex-wrap:wrap; margin-top:12px}
-    footer{margin-top:36px; color:var(--muted); font-size:12px}
-    code{background:rgba(255,255,255,.06); padding:2px 6px; border-radius:6px}
+    footer{
+      margin-top:26px; color:var(--muted); font-size:13px;
+      display:flex; justify-content:space-between; gap:12px; flex-wrap:wrap;
+      border-top:1px solid var(--border); padding-top:14px;
+    }
+    .small{font-size:13px; color:var(--muted)}
+    .kpi{
+      display:grid; grid-template-columns:1fr; gap:10px;
+      margin-top:10px;
+    }
+    .kpi .box{
+      border:1px solid var(--border);
+      background:rgba(255,255,255,.03);
+      border-radius:14px;
+      padding:12px;
+    }
+    .kpi .box strong{display:block; font-size:12px; color:#d8e4ff; letter-spacing:.2px}
+    .kpi .box span{display:block; margin-top:6px; color:var(--muted); line-height:1.5}
+    code{background:rgba(255,255,255,.06); padding:2px 6px; border-radius:8px}
   </style>
 </head>
 <body>
-  <div class="wrap">
+  <div class="container">
     <header>
       <div class="title">
-        <h1>David Limoisin — Data Engineer</h1>
+        <h1>Kamo-data — Portfolio Data Engineer</h1>
         <p>
-          Data Engineer (10+ ans) orienté <strong>ETL/ELT</strong>, <strong>SQL</strong>, industrialisation et qualité.
-          <br/>Objectif : postes CDI Data Engineer / Développeur SQL en environnements critiques.
+          Je m’appelle <strong>David Limoisin</strong>. Je construis des projets “maison” orientés <strong>Data Engineering</strong>
+          (ingestion, modélisation, tests, stockage et visualisation) pour démontrer une approche pragmatique et reproductible,
+          proche des contraintes d’un contexte CDI.
         </p>
-        <div class="badges">
-          <span class="badge">SQL (Oracle / SQL Server / Postgres)</span>
-          <span class="badge">Python</span>
-          <span class="badge">dbt</span>
-          <span class="badge">Docker</span>
-          <span class="badge">BI / DataViz</span>
-        </div>
       </div>
 
-      <div class="cta">
-        <!-- Remplace ces liens -->
-        <a class="btn" href="https://github.com/<ton_user>" target="_blank" rel="noreferrer">GitHub</a>
-        <a class="btn secondary" href="https://www.linkedin.com/in/<ton_linkedin>/" target="_blank" rel="noreferrer">LinkedIn</a>
+      <div class="badges">
+        <span class="badge">GitHub : <a href="https://github.com/Kamo-data" target="_blank" rel="noopener">Kamo-data</a></span>
+        <span class="badge">LinkedIn : <a href="https://www.linkedin.com/in/david-limoisin" target="_blank" rel="noopener">david-limoisin</a></span>
       </div>
     </header>
 
-    <div class="section">
-      <h2>Projets</h2>
-      <div class="grid">
+    <section class="grid">
+      <article class="card two-cols">
+        <div>
+          <h2>EnergyOps — Suivi conso électricité</h2>
+          <p>
+            J’ai construit <strong>EnergyOps</strong> pour transformer un export CSV fournisseur en données exploitables :
+            <strong>chargement dans PostgreSQL</strong>, <strong>modélisation avec dbt</strong> (staging + marts + tests),
+            puis <strong>dashboard Metabase</strong> pour suivre la consommation (HP/HC), l’estimation de coût mensuel et des indicateurs simples.
+          </p>
 
-        <!-- ====== PROJET 1 : EnergyOps ====== -->
-        <article class="card">
-          <!-- Remplace le chemin image si besoin -->
-          <img class="img" src="assets/img/energyops-dashboard.png" alt="EnergyOps dashboard" />
-          <div class="content">
-            <h3>EnergyOps — Suivi conso électricité (CSV → Postgres → dbt → Metabase)</h3>
-            <div class="meta">
-              Pipeline data personnel (0€) : ingestion CSV fournisseur (idempotente), modélisation dbt (staging/marts),
-              tests, et dashboard Metabase pour analyser conso/coût (HP/HC).
+          <div class="meta">
+            <span class="chip">Python</span>
+            <span class="chip">PostgreSQL</span>
+            <span class="chip">dbt</span>
+            <span class="chip">Metabase</span>
+            <span class="chip">Docker Compose</span>
+          </div>
+
+          <div class="cta">
+            <a class="btn primary" href="https://github.com/Kamo-data/energyops" target="_blank" rel="noopener">
+              Voir le repo EnergyOps
+            </a>
+            <a class="btn" href="https://www.linkedin.com/in/david-limoisin" target="_blank" rel="noopener">
+              Me contacter sur LinkedIn
+            </a>
+          </div>
+
+          <div class="kpi">
+            <div class="box">
+              <strong>Ce que je démontre</strong>
+              <span>Pipeline reproductible, séparation raw/staging/marts, tests dbt, et livraison d’un dashboard lisible.</span>
             </div>
-            <div class="tags">
-              <span class="tag">Python</span>
-              <span class="tag">PostgreSQL</span>
-              <span class="tag">dbt</span>
-              <span class="tag">Docker Compose</span>
-              <span class="tag">Metabase</span>
-              <span class="tag">Data Quality</span>
-            </div>
-            <div class="links">
-              <!-- Remplace les liens -->
-              <a class="btn" href="https://github.com/<ton_user>/energyops" target="_blank" rel="noreferrer">Voir le code</a>
-              <a class="btn secondary" href="https://github.com/<ton_user>/energyops/releases" target="_blank" rel="noreferrer">Release</a>
+            <div class="box">
+              <strong>Ce que j’améliore ensuite</strong>
+              <span>Gestion multi-fournisseurs, historisation, qualité avancée, CI GitHub Actions, et documentation plus “produit”.</span>
             </div>
           </div>
-        </article>
+        </div>
 
-        <!-- ====== PROJET 2 : Placeholder ====== -->
-        <article class="card">
-          <img class="img" src="assets/img/placeholder.png" alt="placeholder" />
-          <div class="content">
-            <h3>(À venir) Projet #2 — …</h3>
-            <div class="meta">
-              Tu peux dupliquer la carte et remplacer titre/texte/liens/screenshot pour ajouter tes prochains projets.
-            </div>
-            <div class="tags">
-              <span class="tag">SQL</span>
-              <span class="tag">ETL</span>
-              <span class="tag">Data Modeling</span>
-            </div>
-            <div class="links">
-              <a class="btn" href="https://github.com/<ton_user>" target="_blank" rel="noreferrer">Repo</a>
-            </div>
-          </div>
-        </article>
+        <div>
+          <figure>
+            <img src="assets/img/energyops-dashboard.png" alt="EnergyOps - Dashboard Metabase" />
+          </figure>
+          <p class="small" style="margin-top:10px;">
+            Dashboard Metabase — vue mensuelle (kWh, HP/HC, coût estimé).
+          </p>
+        </div>
+      </article>
 
-      </div>
-    </div>
-
-    <div class="section">
-      <h2>Contact</h2>
-      <p class="meta">
-        Le plus simple : LinkedIn. <br/>
-        (Tu peux aussi ajouter un email pro ou un formulaire plus tard.)
-      </p>
-    </div>
+      <article class="card">
+        <h2>Prochains projets</h2>
+        <p>
+          Je construis ce portfolio projet par projet. La suite sera dans la même logique : un besoin concret,
+          une architecture claire, une exécution reproductible, et une restitution simple.
+        </p>
+        <div class="meta" style="margin-top:12px;">
+          <span class="chip">BudgetOps — suivi budget</span>
+          <span class="chip">HomeOps — suivi chauffage/eau</span>
+          <span class="chip">JobOps — suivi candidatures</span>
+          <span class="chip">QualityOps — tests & data contracts</span>
+        </div>
+      </article>
+    </section>
 
     <footer>
-      Dernière mise à jour : <code>2026</code> — GitHub Pages (statique).
+      <div>© <span id="y"></span> Kamo-data — David Limoisin</div>
+      <div>
+        <a href="https://github.com/Kamo-data" target="_blank" rel="noopener">GitHub</a>
+        •
+        <a href="https://www.linkedin.com/in/david-limoisin" target="_blank" rel="noopener">LinkedIn</a>
+      </div>
     </footer>
   </div>
+
+  <script>
+    document.getElementById("y").textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
