--- a/index.html
+++ b/index.html
@@ -19,6 +19,39 @@
     a{color:var(--accent); text-decoration:none}
     a:hover{text-decoration:underline}
     .container{max-width:980px; margin:0 auto; padding:28px 18px 60px}
+
+    /* Banner */
+    .banner{
+      position:relative;
+      border-bottom:1px solid var(--border);
+      background:rgba(255,255,255,.02);
+      overflow:hidden;
+    }
+    .banner .inner{
+      max-width:980px;
+      margin:0 auto;
+      padding:18px 18px 0;
+    }
+    .banner figure{margin:0}
+    .banner img{
+      width:100%;
+      height:220px;
+      object-fit:cover;
+      border-radius:18px;
+      border:1px solid var(--border);
+      box-shadow:0 14px 30px rgba(0,0,0,.35);
+      display:block;
+    }
+    .banner .overlay{
+      position:absolute;
+      inset:0;
+      background:linear-gradient(180deg, rgba(7,11,20,.25), rgba(7,11,20,.85));
+      pointer-events:none;
+    }
+    @media (max-width: 820px){
+      .banner img{height:170px}
+    }
+
     header{
       display:flex; gap:16px; align-items:flex-start; justify-content:space-between; flex-wrap:wrap;
       margin-bottom:18px;
@@ -95,6 +128,17 @@
   </style>
 </head>
 <body>
+
+  <!-- Banner (assets/img/placeholder.png) -->
+  <section class="banner" aria-label="Bannière du portfolio">
+    <div class="overlay" aria-hidden="true"></div>
+    <div class="inner">
+      <figure>
+        <img src="assets/img/placeholder.png" alt="Bannière Kamo-data" />
+      </figure>
+    </div>
+  </section>
+
   <div class="container">
     <header>
       <div class="title">
